# ads_generator

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
backend/: __init__.py  config.py  main.py
backend/agents/: prompt_refiner.py
backend/agents/prompts/: cinematic_videos.txt
backend/services/: image_generator.py  image_processor.py  video_generator.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/create/: page.tsx
frontend/src/components/: video-generator.tsx
prompts/: 01e5f7ec-6fdf-4f9d-af64-bf2eded0ede7.json  1c7e4a05-52e6-4111-b8fc-d4f4f93f7aac.json  2066a295-f08f-47a7-bf63-b21d95c4cc7e.json  20e461c7-9ae3-4099-8a94-0bd8ebb87873.json  2897c3f0-e2dd-4318-9f10-7c4cb84219f1.json  2c2cb28c-585c-40e0-8922-93b451bb1d9e.json  407719b3-b2e7-4578-bfb3-387823c3203a.json  4fad7de8-4e72-4e6e-8759-cf75771d40b1.json  5ace6224-180d-42b0-9756-90ca40bebfdd.json  63f5f0bf-c2b8-4a8b-bb6f-7c93f1f02b6f.json  6f50ab2a-b471-49f6-a4c2-aea07194c324.json  7fa4ea2a-8fe5-4e5f-94ec-44d027f79ece.json  97d82519-2988-4233-9427-c87f9a2cbb07.json  a12b4bbc-1c00-4e0c-9940-ca1070efbd00.json  a1e02b22-e3b4-4d0d-a400-c4d41d03a7d3.json  a40ec5ef-a32c-480a-b25d-0f2967bda2ef.json  b8767f5c-bf00-4c66-8012-63be7ad229fc.json  c0d3fdb2-e035-47a3-8853-c182416685a6.json  c4376df7-0fed-4bec-a2ea-70c43674cff7.json  e42163fd-5236-40c0-a847-8ed38dd4fcc6.json  f4b0a6f9-85ef-4d1c-8ac4-ff0cea2b5713.json  f9f5e5df-631e-453d-97aa-c5b8018dd5f7.json
